# qm

./: .gitignore  LICENSE  README.md  qm.cabal
src/: Qm.hs
test/: SpecHelper.hs
